# credit_default_risk_assessment

./: .env  .gitignore  README.md  SETUP.md  app.py  pyproject.toml  requirements.txt
models/: behavioral_traits_model.py  risk_model.py
notebooks/: risk_default_analysis.ipynb
src/assets/: behavioral_traits_model.pkl
src/components/: behavioral_traits.py  questionnaire.py  results.py
src/models/: behavioral_predictor.py  risk_predictor.py
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
streamlit_app/src/models/: behavioral_predictor.py  risk_predictor.py
utils/: exploratory_data_analysis_functions.py
