[project]
name = "home_credit_default_risk"
version = "0.1.0"
description = ""
authors = [
    {name = "VytCepas",email = "121751744+VytCepas@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (==2.3.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "imbalanced-learn (>=0.12.0,<1.0.0)",
    "shap (>=0.45.0,<1.0.0)",
    "boruta (>=0.4.3,<0.5.0)",
    "black (>=25.1.0,<26.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "pandarallel (>=1.6.5,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
