[tool.poetry]
name = "home-credit-default-risk"
version = "0.1.0"
description = "Credit Default Risk Assessment Application"
authors = ["VytCepas <121751744+VytCepas@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.3.0"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"
imbalanced-learn = "^0.12.0"
shap = "^0.45.0"
boruta = "^0.4.3"
black = "^25.1.0"
requests = "^2.32.4"
statsmodels = "^0.14.4"
pyarrow = "^20.0.0"
pandarallel = "^1.6.5"
ipywidgets = "^8.1.7"
lightgbm = "^4.6.0"
streamlit = "^1.50.0"
plotly = "^6.3.1"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
